[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mnmstpy"
version = "1.1.0"
dependencies=[
    "scanpy>=1.9.3",
    "numpy",
    "pandas",
    "anndata",
    "matplotlib",
    "scipy",
    "scikit-learn",
    "psutil",
    "tqdm",
    "leidenalg",
    "torch>=2.0",
    "torchvision",
]
authors = [
  { name="Yu Wang", email="qq352542417@gmail.com" },
]
description = "The initial package of MNMST"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/xkmaxidian/MNMST"
Issues = "https://github.com/xkmaxidian/MNMST/issues"